--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 {% include head.html %}
@@ -26,14 +21,14 @@
             </div>
         </div>
     </section>
-
+    
     <!-- Main -->
     <div id="main">
 
         <!-- One -->
         {% include tiles.html %}
 
-        <!-- Two -->
+        <!-- Two
         <section id="two">
             <div class="inner">
                 <header class="major">
@@ -44,11 +39,11 @@
                     <li><a href="landing.html" class="button next">Get Started</a></li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
     </div>
+<!--to enable fotter add "include footer.html" with one indent lv below this line in upper include titles format-->
 
-    {% include footer.html %}
 
 </body>
 
