UPDATE study layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,9 @@
 	.post_title_mid{
 		text-align:center;
 	}
+	.temp_button{
+		text-align:center;
+	}
 	</style>
 <body>
 
@@ -36,6 +39,10 @@
 		</article>
 	</div>
 </section>
+
+<div class = "temp_button">
+	<a href="javascript:history.back()"><b>Back to Previous Page</b></a></li>
+</div class = "temp_button">
 
 <script type="text/javascript" async
 	src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
