--- a/_layouts/study_main.html
+++ b/_layouts/study_main.html
@@ -7,6 +7,16 @@
 <html>
 
     {% include head.html %}
+    <style>
+        .post_order{
+            width: 100%;
+            text-align: center;
+            margin: 10px 10px 10px 10px; 
+        }
+        .line_margin{
+            margin: 0 15% 0 15%;
+        }
+    </style>
 
     <body>
 
