--- a/_sass/libs/_skel.scss
+++ b/_sass/libs/_skel.scss
@@ -321,11 +321,11 @@
 			}
 
 		// Default.
-			.row#{$x} > * { padding: ($r * $multiplier) 0 0 ($c * $multiplier); }
+			.row#{$x} > * { padding: ($r * $multiplier) ($c * $multiplier) 0 ($c * $multiplier); }
 			.row#{$x} { margin: ($r * $multiplier * -1) 0 -1px ($c * $multiplier * -1); }
 
 		// Uniform.
-			.row.uniform#{$x} > * { padding: ($c * $multiplier) 0 0 ($c * $multiplier); }
+			.row.uniform#{$x} > * { padding: ($c * $multiplier) ($c * $multiplier) 0 ($c * $multiplier); }
 			.row.uniform#{$x} { margin: ($c * $multiplier * -1) 0 -1px ($c * $multiplier * -1); }
 
 	}
