--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,9 +14,9 @@
                 <h1>{{ page.landing-title }}</h1>
             </header>
             <div class="content">
-                <p style="text-transform: uppercase;">{{ site.description }}</p>
+                
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                    <a href="#one"><p style="text-transform: uppercase;">{{ site.description }}</p></a>
                 </ul>
             </div>
         </div>
